kubernetes/ingress/websocket-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-ingress
  namespace: hirely
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.hirely.local
      secretName: api-hirely-tls-secret
  rules:
    - host: api.hirely.local
      http:
        paths:
          - path: /ws-admin
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /ws-recrutement
            pathType: Prefix
            backend:
              service:
                name: recrutement-service
                port:
                  number: 8082
